# Programming-Contest-CPP

./: .gitignore  CMakeLists.txt  README.md  submission.template  task.template
archive/: ADiverseStrings.cpp  AParty.cpp  ARomanAndBrowser.cpp  B1KForThePriceOfOneEasyVersion.cpp  B2KForThePriceOfOneHardVersion.cpp  BModuloEquality.cpp
output/: main.cpp
tasks/: ATemporarilyUnavailable.cpp  CLongBeautifulInteger.cpp  CPetyaAndExam.cpp
testrunner/: main.cpp
